--- a/promoções.html
+++ b/promoções.html
@@ -11,9 +11,9 @@
 
 <body>
         <div class="header">
-                <a href="./Inicio.html" class="logo"><img src="./Morgas Tech.png" class="loguinho"></a></a>
+                <a href="./index.html" class="logo"><img src="./Morgas Tech.png" class="loguinho"></a></a>
                 <div class="header-right">
-                        <a class="active" href="Inicio.html"> Inicio </a>
+                        <a class="active" href="index.html"> Inicio </a>
                         <a href="Produtos.html"> Produtos </a>
                         <a href="promoções.html"> Promoções </a>
                         <a href="contactos.html"> Contactos </a>
