--- a/contactos.html
+++ b/contactos.html
@@ -14,7 +14,7 @@
     <div class="header">
        <a href="./index.html" class="logo"><img src="./Morgas Tech.png" class="loguinho"></a></a>
         <div class="header-right">
-            <a class="active" href="index.html"> Inicio </a>
+            <a class="active" href="index.html"> Início </a>
             <a href="Produtos.html"> Produtos </a>
             <a href="promoções.html"> Promoções </a>
             <a href="contactos.html"> Contactos </a>
