--- a/contactos.html
+++ b/contactos.html
@@ -70,12 +70,12 @@
         <th class="tabtext">Lojas</th>
     </tr>
     <tr>
-        <td class="tabtext">De seg a sex das 09:00 às 19:00</td>
+        <td class="tabtext">De segunda a sexta das 09:00 às 19:00</td>
         <td class="tabtext">Telf: 913516467</td>
         <td class="tabtext">Lisboa</td>
     </tr>
     <tr>
-        <td class="tabtext">Sab das 09:00 à 13:00</td>
+        <td class="tabtext">Sábado das 09:00 à 13:00</td>
         <td class="tabtext">Telm: 243 351 646</td>
         <td class="tabtext">Santarém</td>
     </tr>
