--- a/contactos.html
+++ b/contactos.html
@@ -53,7 +53,7 @@
                             style="color: white;">Não</label>
                     </div>
                     <div class="field">
-                        <label for="mensagem" style="color: white;">Sua mensagem:</label>
+                        <label for="mensagem" style="color: white;">Mensagem:</label>
                         <textarea name="mensagem" id="mensagem" placeholder="Escreva sua Mensagem" required></textarea>
                     </div>
 
