--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     </div>
   </div>
   <h2 style="text-align:center;color:white"> Bem Vindo à Morgas Tech </h2>
-  <h2 style="text-align:center;color:white"> Boas, seja muito bem vindo à Morgas Tech, aqui pode comprar
-    várias coisas tudo a ver com tecnologia a muito bom preço, qualquer coisa contacte ligando ou indo à página
-    contactos e prenceher o formulário que lá se encontra logo no início da página e se quiserem ver o horário da
-    loja, ele encontra-se no fim da página onde também se encontram as lojas existentes</h2>
+  <h2 style="text-align:center;color:white"> Morgas Tech </h2>
   <img src="./img_ini.png" style="width: 60%; height: 700px; margin-left: 20%;">
 </body>
 
