--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
   </div>
   <h2 style="text-align:center;color:white"> Bem Vindo à Morgas Tech </h2>
-  <h2 style="text-align:center;color:white"> Morgas Tech </h2>
+  <h2 style="text-align:center;color:white">  </h2>
   <img src="./img_ini.png" style="width: 60%; height: 700px; margin-left: 20%;">
 </body>
 
